# business_systems_lifecycle

./: .gitignore  README.md  command.txt  test_mcp_connection.py
backend/: .env.example  check_db.py  pyproject.toml  run_all.py  run_transform.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_new_sources_and_dims.py
backend/data/raw/bis/: raw_bis_lbs_a1.csv  raw_bis_lbs_a2.csv  raw_bis_lbs_a3.csv
backend/data/raw/bista/: map_BAID_DOM_BAID_MOF.dta
backend/data/raw/bista/_9918_cre/: bista_dom_HV_9918_cre.dta  bista_dom_I_9918_cre.dta  bista_dom_L_9918_cre.dta  bista_mof_H_9918_cre.dta  bista_mof_I_9918_cre.dta  bista_mof_L_9918_cre.dta
backend/data/raw/bista/_9919_cre/: bista_mof_HV_9919_cre.dta  bista_mof_H_9919_cre.dta  bista_mof_I_9919_cre.dta  bista_mof_L_9919_cre.dta
backend/data/raw/eba/: raw_eba_transparency_2025_raq_statistical_annex.xlsx
backend/data/raw/ecb_eurosystem/: Annual_consolidated_balance_sheet_Eurosystem.csv
backend/data/raw/ecb_sup/: ecb_sup_lcr_buffer.csv  ecb_sup_lcr_outflow.csv  ecb_sup_lcr_ratio.csv  ecb_sup_nsfr_asf.csv  ecb_sup_nsfr_ratio.csv  ecb_sup_nsfr_rsf.csv
backend/src/app/: config.py  main.py
backend/src/app/db/: session.py
backend/src/app/ingest/: bis_lbs.py  bista.py  eba.py  ecb_eurosystem.py  ecb_sup.py
backend/src/app/models/: __init__.py  dimensions.py  lineage.py  staging.py  validation.py  warehouse.py
backend/src/app/schemas/: lcr.py  lineage.py  nsfr.py  quality.py  summary.py
backend/src/app/services/: lineage_service.py  transform.py  validate.py
frontend/: index.html  (+2 more)
(+47 files in other folders)
